atualizei estilos dos textos e blocos

--- a/cordel moderno/imagens/estilo/style.css
+++ b/cordel moderno/imagens/estilo/style.css
@@ -1,2 +1,68 @@
 @charset "UTF-8";
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    min-height: 100vh; /*vw seria a largura*/
+    background-color: darkgray;
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps; /*Todas maiusculas, só que as primeiras maiores*/
+    /*tranformar letras em maiusculas - text-transform: uppercase;*/
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    /*10% de padding da tela para parte superior e inferior, esse também cria um efeito de adaptação*/
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+.normal {
+    background-color: white;
+    color: black;
+}
+
+.imagem {
+    background-color: rgb(53, 51, 51);
+    color: white
+}
+
+.imagem > p {
+    background-color: rgba(0, 0, 0, 0.258);
+    width: 400px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
