--- a/cordel/estilo/style.css
+++ b/cordel/estilo/style.css
@@ -1,13 +1,27 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
+    
 }
 
 html, body {
     min-height: 100vh; /*vw seria a largura*/
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -20,6 +34,8 @@ header > h1 {
     padding-top: 50px;
     font-variant: small-caps; /*Todas maiusculas, só que as primeiras maiores*/
     /*tranformar letras em maiusculas - text-transform: uppercase;*/
+    font-family: var(--fonte2);
+    font-size: 10vw; /*10% da largura da tela*/
 }
 
 header > p {
@@ -42,6 +58,8 @@ section {
     /*10% de padding da tela para parte superior e inferior, esse também cria um efeito de adaptação*/
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 .normal {
@@ -55,8 +73,9 @@ section {
 }
 
 .imagem > p {
+    display: inline-block; /*caixa se adapta no tamnho do conteúdo*/
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.258);
-    width: 400px;
 }
 
 footer {
