--- a/cordel/estilo/style.css
+++ b/cordel/estilo/style.css
@@ -62,6 +62,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 .normal {
     background-color: white;
     color: black;
@@ -69,13 +73,28 @@ section {
 
 .imagem {
     background-color: rgb(53, 51, 51);
-    color: white
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.514);
+    background-attachment: fixed;
 }
 
 .imagem > p {
     display: inline-block; /*caixa se adapta no tamnho do conteúdo*/
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.258);
+    background-color: rgba(0, 0, 0, 0.596);
+    text-shadow: 1px 1px 0px black;
+}
+
+#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+#img02 {
+    background-image:  url('../imagens/background002.jpg');
+    background-position: right center;
+    background: cover;
 }
 
 footer {
